--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,7 @@ pyserial = "^3.5"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+Testing = "pythondaq.view:view"
+
