--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
+clipy = "pythondaq.cli:cmd_group"
 Testing = "pythondaq.view:view"
+
 
