--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pyvisa-py = "^0.5.3"
 pyserial = "^3.5"
 pyside6 = "^6.4.1"
 pyqtgraph = "^0.13.1"
+nsp2visasim = "^1.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -30,4 +31,5 @@ build-backend = "poetry.core.masonry.api"
 cli = "pythondaq.cli:cmd_group"
 Testing = "pythondaq.view:view"
 gui = "pythondaq.gui:main"
+
 
